Fix error message visibility

--- a/styles/auth.css
+++ b/styles/auth.css
@@ -7,7 +7,7 @@
     width: 400px;
     padding: 20px;
     background: rgba(255, 255, 255, 0.1);
-    border-radius: 15px;
+    border-radius: 10px;
     /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2); */
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -151,8 +151,17 @@
   color: var(--error);
   font-size: 12px;
   margin: 0;
+  /* display: none; */
+  opacity: 0;
   margin-top: -15px;
-  display: block;
+  transition: opacity 0.8s ease;
+  /* display: block; */
+  visibility: hidden;
+}
+
+.error-message.visible {
+    opacity: 1;
+    visibility: visible;
 }
 
 .input {
