--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center; 
     box-sizing: border-box;
-    border: 2px solid var(--primary-200);
+    border-bottom: 2px solid var(--primary-200);
 }
 
 .header__inner {
